--- a/NB_Titanic.ipynb
+++ b/NB_Titanic.ipynb
@@ -1661,8 +1661,17 @@
    },
    "source": [
     "### Final Score\n",
-    "Accuracy of 79%, or to"
+    "Accuracy of 79%, about 70th percentile. I think I could do better, but just wanted to test some models."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
